--- a/public/404.html
+++ b/public/404.html
@@ -4,23 +4,14 @@
     <meta charset="utf-8" />
     <title>React Router</title>
     <script type="text/javascript">
-      var pathSegmentsToKeep = 1;
+      // Obtém a URL original, incluindo o hash e o caminho
+    const originalUrl = window.location.href;
 
-      var l = window.location;
-      l.replace(
-        l.protocol +
-          "//" +
-          l.hostname +
-          (l.port ? ":" + l.port : "") +
-          l.pathname
-            .split("/")
-            .slice(0, 1 + pathSegmentsToKeep)
-            .join("/") +
-          "/?/" +
-          l.pathname.slice(1).split("/").slice(pathSegmentsToKeep).join("/").replace(/&/g, "~and~") +
-          (l.search ? "&" + l.search.slice(1).replace(/&/g, "~and~") : "") +
-          l.hash
-      );
+    // Constrói a URL de redirecionamento com o hash e o caminho
+    const redirectUrl = window.location.origin + '/#' + window.location.pathname + window.location.search;
+
+    // Redireciona para a página inicial com o hash e o caminho
+    window.location.replace(redirectUrl);
     </script>
   </head>
   <body></body>
